# VibeCal

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  package-lock.json  package.json
.github/workflows/: publish.yml
memory/: active-context.md  decisions.md  index.md  requirements.md  retrieval-rules.md
scripts/: get-release-notes.ps1  reset-local-state.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.win7.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
templates/: feature-brief.md
