[package]
name = "vibecal"
version = "0.1.0"
description = "An unofficial Windows desktop wrapper compatible with Apple Calendar"
authors = ["Codex"]
edition = "2021"

[lib]
name = "vibecal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
